--- a/css/for_fun.css
+++ b/css/for_fun.css
@@ -1,44 +1,47 @@
 .row {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
+  /* padding: 0 4px; */
 }
 
 /* Create four equal columns that sits next to each other */
 .column {
   flex: 25%;
-  max-width: 25%;
-  padding: 0 4px;
-  margin-right: 10px;
+  max-width: 22%;
+  /* padding: 0 4px; */
+  margin-right: 25px;
+}
+
+.column last-of-type  {
+  border-right: none;
 }
 
 .column img {
-  margin-top: 8px;
+  /* margin-top: 8px; */
   vertical-align: middle;
   width: 100%;
-  border: 5px solid orange;
+  border: 5px solid rgb(244, 116, 44);
 
 }
 
 .quilting {
+  margin-left: 10px;
   padding: 5px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  border: 5px solid blue;
+  border: 5px solid rgb(12, 52, 92);
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
+/* @media screen and (max-width: 800px) {
   .column {
     flex: 50%;
     max-width: 50%;
   }
-}
+} */
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   .column {
     flex: 100%;
     max-width: 100%;
   }
-}
+} */
