--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -53,7 +53,7 @@ body {
   height: 25px;
   right: -17px;
   background-color: white;
-  border: 4px solid #FF9F55;
+  border: 4px solid #F4742C;
   top: 15px;
   border-radius: 50%;
   z-index: 1;
