--- a/css/style.css
+++ b/css/style.css
@@ -13,20 +13,21 @@ body {
   'header header header header header header' 
   'left middle middle middle middle right' 
   'footer footer footer footer footer footer';
-   /* grid-column-gap: 10px; - if you want gap between the columns */
+  /* if you want gap between the columns */
+   grid-column-gap: 10px; 
 
 }
 
 /* Style the header */
 .header {
   grid-area: header;
-  border-bottom: 2px solid black;
   text-align: center;
   font-size: 35px;
 }
 
 a {
-  color: blue;
+  color: black;
+  text-decoration: none;
 }
 
 a:hover {
@@ -37,19 +38,22 @@ a:active {
   color: green;
 }
 
+.main-nav-h2 {
+  color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px rgb(12, 52, 92), 0 0 5px rgb(4, 20, 36);
+} */
+
+
 h3 {
   padding-left: 20px;
   /* color: white;
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue; */
 }
-/* h4 {
-  color: white;
-  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-} */
+
 
 .nav-button {
     border: solid, #787878, 10px;
-    color: white;
+    background-color: rgb(12, 52, 92);
     padding: 15px 32px;
     margin-right: 10px;
     text-align: center;
@@ -59,23 +63,27 @@ h3 {
     box-shadow: 5px 5px black;
 }
 
+.nav-button a {
+  color: white;
+}
+
 li {
   padding: 10;
 }
-
-
 
 .left,
 .middle,
 .right {
   padding: 10px;
-  /* height: 300px; Should be removed. Only for demonstration */
 }
 
 /* Style the left column */
 .left {
   grid-area: left;
 }
+/* .left img {
+  align-self: center;
+} */
 
 /* Style the middle column */
 .middle {
@@ -95,14 +103,13 @@ li {
 /* Style the footer */
 .footer {
   grid-area: footer;
-  border-top: 2px solid black;
   padding-top: 10px;
   margin-top: 5px;
   text-align: center;
 }
 
 /* Responsive layout (ex: iPhone - makes the three columns stack on top of each other instead of next to each other */
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   .grid-container  {
     grid-template-areas: 
       'header header header header header header' 
@@ -111,4 +118,4 @@ li {
       'right right right right right right' 
       'footer footer footer footer footer footer';
   }
-}
+} */
